--- a/reinsercion.html
+++ b/reinsercion.html
@@ -110,7 +110,8 @@ div.csl-indent {
 <p>La transformación de la infraestructura es un motor de integración penitenciaria desde el punto de vista espacial debido a que influye directamente en la calidad de vida de los/as reclusos/as.</p>
 <section id="relevancia" class="level5">
 <h5 class="anchored" data-anchor-id="relevancia">Relevancia</h5>
-<p>Para concluir, propiciar un ambiente psicosocial optimo, que garantice la integración y reinserción social de quienes cumplen o cumplieron condena es sumamente relevante para la reducción de la criminalidad y la construcción del bienestar social. Lamentablemente en el presente proyecto de investigación no hice uso de bibliografía con enfoque de género debido a la poca existencia de material actualizado que refiera al tema, pero junto a los puntos contemplados anteriormente se debe agregar considerar una reinserción social integra y con enfoque de género, el cual propicie el desarrollo de la maternidad y el vinculo madre e hijo/a.</p>
+<p>Para concluir, propiciar un ambiente psicosocial optimo, que garantice la integración y reinserción social de quienes cumplen o cumplieron condena es sumamente relevante para la reducción de la criminalidad y la construcción del bienestar social. Lamentablemente en el presente proyecto de investigación no hice uso de bibliografía con enfoque de género debido a la poca existencia de material actualizado que refiera al tema, pero junto a los puntos contemplados anteriormente se debe agregar considerar una reinserción social integra y con enfoque de género, el cual propicie el desarrollo de la maternidad y el vinculo madre e hijo/a.<br>
+</p>
 
 </section>
 </section>
